Improving Functionalities