@@ -1,5 +1,6 @@
 package lu.nyo.functionrunner.functions;
 
+import com.google.common.collect.ImmutableMap;
 import lu.nyo.functionrunner.ExecutionUnitOutput;
 import lu.nyo.functionrunner.interfaces.Context;
 import lu.nyo.functionrunner.interfaces.ExecutionUnit;
@@ -13,7 +14,7 @@ public class Test6 implements ExecutionUnit<String> {
     @Override
     public String adapt(Object data,
                         Context context,
-                        Map<String, Object> args) {
+                        ImmutableMap<String, Object> args) {
         return data.toString();
     }
 
@@ -21,9 +22,9 @@ public class Test6 implements ExecutionUnit<String> {
     public void execute(String input,
                         Context context,
                         ExecutionUnitOutput executionUnitOutput,
-                        Map<String, Object> args) {
+                        ImmutableMap<String, Object> args) {
         Integer abc = input.length() * 10;
 
-        executionUnitOutput.setOutput(abc, CONTINUE, Map.of("CLASS", "dasda"));
+        executionUnitOutput.setOutput(abc, CONTINUE, ImmutableMap.of("CLASS", "dasda"));
     }
 }
