@@ -1,10 +1,9 @@
 package lu.nyo.functionrunner.functions;
 
+import com.google.common.collect.ImmutableMap;
 import lu.nyo.functionrunner.ExecutionUnitOutput;
 import lu.nyo.functionrunner.interfaces.Context;
 import lu.nyo.functionrunner.interfaces.ExecutionUnit;
-
-import java.util.Map;
 
 import static lu.nyo.functionrunner.enums.PostAction.CONTINUE;
 
@@ -13,7 +12,7 @@ public class Test8 implements ExecutionUnit<String> {
     @Override
     public String adapt(Object data,
                         Context context,
-                        Map<String, Object> args) {
+                        ImmutableMap<String, Object> args) {
         return data.toString();
     }
 
@@ -21,9 +20,9 @@ public class Test8 implements ExecutionUnit<String> {
     public void execute(String input,
                         Context context,
                         ExecutionUnitOutput executionUnitOutput,
-                        Map<String, Object> args) {
+                        ImmutableMap<String, Object> args) {
         Integer abc = input.length() * 10;
 
-        executionUnitOutput.setOutput(abc, CONTINUE, Map.of("CLASS", Integer.class));
+        executionUnitOutput.setOutput(abc, CONTINUE, ImmutableMap.of("CLASS", Integer.class));
     }
 }
